--- a/style.css
+++ b/style.css
@@ -1,33 +1,27 @@
 html {
   box-sizing: border-box;
+  background-color: #000;
 }
 
 *, *:before, *:after {
   box-sizing: inherit;
 }
 
-html {
-  font-size: 10px;
-  background:#ffc600;
+body {
+  margin: 0;
+  overflow: hidden;
 }
 
 .photobooth {
-  background:white;
-  max-width:150rem;
-  margin: 2rem auto;
-  border-radius:2px;
-}
-
-/*clearfix*/
-.photobooth:after {
-  content: '';
-  display: block;
-  clear: both;
+  position: relative;
+  display: flex;
+  align-items: center;
 }
 
 .photo {
-  width:100%;
-  float:left;
+  height: 100vh;
+  width: 100%;
+  object-fit: contain;
 }
 
 .player {
@@ -37,17 +31,36 @@ html {
   width:200px;
 }
 
+.caption {
+  bottom: 0;
+  right: .5rem;
+  font-size: .625rem;
+  font-family: helvetica, arial, sans-serif;
+  position: absolute;
+  z-index: 10;
+  color: rgba(255, 255, 255, .5);
+}
+
 /*
   Strip!
 */
 
 .strip {
-  padding:2rem;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  overflow: scroll;
 }
 .strip img {
-  width:100px;
-  overflow-x: scroll;
-  padding:0.8rem 0.8rem 2.5rem 0.8rem;
+  width: 100px;
+  margin: .5rem;
+  overflow-y: scroll;
+  padding: .5rem 0.5rem 1.5rem;
   box-shadow:0 0 3px rgba(0,0,0,0.2);
   background:white;
 }
